--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -110,7 +110,7 @@
                         <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
                                 class="dropdown-icon icmn-exit"></i> Сменить персонажа</a>
                         <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
-                        <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"
+                        <a class="dropdown-item" href="/views/permissions/managePermissions.html"
                            ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i> Управление
                             доступом</a>
                     </ul>
