--- a/public/views/trigger_skills/trigger_skills_manager.html
+++ b/public/views/trigger_skills/trigger_skills_manager.html
@@ -154,7 +154,7 @@
 
             <div class="panel">
                 <div class="panel-heading">
-                    <h3>Прикрепленные навыки <a ng-show="hasCreatePermission('TriggerSkill')" href="#" class="link-underlined link-blue" ng-click="showAddDialog()">Добавить</a></h3>
+                    <h3>Тригерные навыки <a ng-show="hasCreatePermission('TriggerSkill')" href="#" class="link-underlined link-blue" ng-click="showAddDialog()">Добавить</a></h3>
                 </div>
                 <div class="panel-body">
 
