--- a/public/views/trigger_skills/trigger_skill.html
+++ b/public/views/trigger_skills/trigger_skill.html
@@ -151,7 +151,9 @@
         <section class="page-content">
             <div class="panel">
                 <div class="panel-heading">
-                    <h3 class="text-center">Уровни владения навыком "{{triggerSkill.name}}" <a ng-show="selectLevels != '{'" href="#" class="link-underlined link-blue" ng-click="addLevel()">Добавить</a></h3>
+                    <h3 class="text-center">Уровни владения навыком "{{triggerSkill.name}}" <a
+                            ng-show="selectLevels != '{'" href="#" class="link-underlined link-blue"
+                            ng-click="addLevel()">Добавить</a></h3>
                 </div>
                 <div class="panel-body">
 
@@ -166,8 +168,10 @@
                         </thead>
                     </table>
                 </div>
+            </div>
         </section>
     </div>
 </div>
+<div class="main-backdrop"><!-- --></div>
 </body>
 </html>
