--- a/public/views/attributes/attribute_manager.html
+++ b/public/views/attributes/attribute_manager.html
@@ -153,9 +153,9 @@
         <section class="page-content">
 
             <div class="panel">
-                <div class="panel-heading">
+                <div class="panel-heading" style="padding-bottom: 0">
                     <div class="form-group" ng-show="hasCreatePermission('Attribute')" ng-click="showAddDialog()">
-                        <h3 class="display-inline">Атрибуты </h3>
+                        <h3 class="display-inline margin-inline">Атрибуты </h3>
                         <button class="btn btn-icon btn-success btn-rounded margin-inline">
                             <i class="icmn-plus3"></i>
                         </button>
