--- a/public/views/merits/merit_manager.html
+++ b/public/views/merits/merit_manager.html
@@ -167,6 +167,7 @@
                             <th>Только при создании</th>
                             <th>Описание</th>
                             <th>Бонус</th>
+                            <th>Пререквизиты</th>
                             <th>Действия</th>
                         </tr>
                         </thead>
