--- a/public/views/attributes/attribute_manager.html
+++ b/public/views/attributes/attribute_manager.html
@@ -153,7 +153,7 @@
         <section class="page-content">
 
             <div class="panel">
-                <div class="panel-heading" style="padding-bottom: 0">
+                <div class="panel-heading">
                     <h3 class="display-inline margin-inline">Атрибуты <a ng-show="hasCreatePermission('Attribute')" href="#" class="link-underlined link-blue" ng-click="showAddDialog()">Добавить</a></h3>
                 </div>
                 <div class="panel-body">
