--- a/public/views/races/race_manager.html
+++ b/public/views/races/race_manager.html
@@ -4,69 +4,180 @@
     <title>Список рас</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/stylesheets/main.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/vendors/datatables/media/css/dataTables.bootstrap4.min.css">
+
+    <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/sweetalert2/dist/sweetalert2.min.css">
+
+    <!-- Vendors Scripts -->
+    <!-- v1.0.0 -->
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/tether/dist/js/tether.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/node_modules/jscrollpane/script/jquery.jscrollpane.min.js"></script>
+    <script src="/node_modules/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script src="/node_modules/autosize/dist/autosize.min.js"></script>
+    <script src="/assets/vendors/datatables/media/js/dataTables.bootstrap4.min.js"></script>
+    <script src="/assets/vendors/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
+    <script src="/assets/vendors/datatables-responsive/js/dataTables.responsive.js"></script>
+
+    <script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+    <!-- Clean UI Scripts -->
+    <script src="/node_modules/angular/angular.min.js"></script>
+    <script src="/node_modules/ngstorage/ngStorage.min.js"></script>
+    <script src="/assets/common/js/common.min.js"></script>
+
+
+    <!-- Clean UI Scripts -->
     <script src="/views/permissions/permissions.js"></script>
     <script src="race_manager.js"></script>
     <script src="/views/permissions/check_player_permissions.js"></script>
 </head>
 
-<body ng-app="raceManagerApp">
+<body class="theme-default menu-left layout-boxed mode-box-shadow" ng-app="raceManagerApp">
 <div ng-controller="permissionsController">
-    <div data-ng-include data-src="'/views/main-menu.html'"></div>
-    <div ng-controller="racesListController">
-        <div data-ng-include data-src="'/views/loader.html'"></div>
-        <table class="table table-striped">
-            <tr ng-repeat="race in races | orderBy : 'id'">
-                <td style="vertical-align:middle;">
-                    <a ng-show="hasEditPermission('Race')" href="race.html?id={{race.id}}" class="btn btn-link"
-                       role="button">{{ race.name }}</a>
-                    <div ng-hide="hasEditPermission('Race')">{{ race.name }}</div>
-                </td>
-                <td style="vertical-align:middle;">{{ race.max_age }}</td>
-                <td ng-show="hasDeletePermission('Race')">
-                    <a class="btn btn-link" ng-click="deleteRace(race.id)">х</a>
-                </td>
-            </tr>
-        </table>
-    </div>
-
-    <div class="container" ng-show="hasCreatePermission('Race')">
-        <h2>Добавить расу</h2>
-
-        <form class="form-horizontal" role="form" ng-controller="addRaceController"
-              name="createRaceForm">
-            <div data-ng-include data-src="'loader.html'"></div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="race_name">Название расы:</label>
-
-                <div class="col-sm-10">
-                    <input type="text" ng-model="race_name" class="form-control" id="race_name" placeholder="Человек"
-                           required>
+    <div class="boxed-container" ng-controller="raceListController">
+        <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
+            <div class="logo-container">
+                <a href="#" class="logo">
+                    <img src="/assets/common/img/logo.png"/>
+                </a>
+            </div>
+            <div class="left-menu-inner scroll-pane">
+                <ul class="left-menu-list left-menu-list-root list-unstyled">
+                    <li>
+                        <a class="left-menu-link" href="/views/user_personage_manager.html?id={{player.id}}">
+                            <i class="left-menu-link-icon fa fa-users"><!-- --></i>
+                            Персонажи
+                        </a>
+                    </li>
+                    <li class="left-menu-list-active">
+                        <a class="left-menu-link" href="/views/races/race_manager.html">
+                            <i class="left-menu-link-icon fa fa-users"><!-- --></i>
+                            Расы
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/attributes/attribute_manager.html">
+                            <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
+                            Атрибуты
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/merits/merit_manager.html">
+                            <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
+                            Достоинства
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/inherents/inherent_manager.html">
+                            <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
+                            Врожденные особенности
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
+                            <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
+                            Недостатки
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/attached_skills/attached_skills_manager.html">
+                            <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
+                            Прикрепленные навыки
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/trigger_skills/trigger_skills_manager.html">
+                            <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
+                            Тригерные навыки
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="/views/spells/spells_manager.html">
+                            <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
+                            Заклинания
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <nav class="top-menu" ng-class="{'hidden-top-menu': hideTopMenu}">
+            <div class="menu-icon-container hidden-md-up">
+                <div class="animate-menu-button left-menu-toggle">
+                    <div><!-- --></div>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="max_age">Максимальный возраст:</label>
+            <div class="menu">
+                <div class="menu-user-block">
+                    <div class="dropdown dropdown-avatar">
+                        <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown"
+                           aria-expanded="false">
+                            <span class="user-name">Игрок: <strong>{{player.name}}</strong></span>
+                            <span class="avatar" href="profile.html">
+                        <img src="/assets/common/img/temp/avatars/4.jpg" alt="Alternative text to the image">
+                    </span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
+                            <a class="dropdown-item" href="profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
+                                    class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
+                                    class="dropdown-icon icmn-exit"></i> Сменить персонажа</a>
+                            <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
+                            <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"
+                               ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i> Управление
+                                доступом</a>
+                        </ul>
+                    </div>
+                </div>
 
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" id="max_age" placeholder="150" ng-model="max_age" min="0"
-                           required>
+                <div class="menu-info-block">
+                    <div class="left">
+                        <div class="menu-info-block">
+                            <div class="example-buy-btn hidden-xs-down">
+                                <div class="btn expir btn-success-outline btn-rounded">
+                                    Права: {{player.Role.name}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </nav>
+
+        <section class="page-content">
+
+            <div class="panel">
+                <div class="panel-heading">
+                    <h3 class="display-inline margin-inline">Расы <a ng-show="hasCreatePermission('Race')" href="#"
+                                                                     class="link-underlined link-blue"
+                                                                     ng-click="showAddDialog()">Добавить</a></h3>
+                </div>
+                <div class="panel-body">
+
+                    <table id="racesTable" class="table table-hover nowrap" width="100%" cellspacing="0">
+                        <thead>
+                        <tr>
+                            <th>Имя</th>
+                            <th>Максимальный возраст</th>
+                            <th>Описание</th>
+                            <th>Стомость атрибутов</th>
+                            <th>Расовые особенности</th>
+                            <th>Действия</th>
+                        </tr>
+                        </thead>
+                    </table>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default" ng-click="createRace()"
-                            ng-disabled="createRaceForm.$invalid">Добавить
-                    </button>
-                </div>
-            </div>
-        </form>
+        </section>
     </div>
 </div>
+<div class="main-backdrop"><!-- --></div>
 
 </body>
 </html>
