--- a/public/views/spells/spells_manager.html
+++ b/public/views/spells/spells_manager.html
@@ -151,6 +151,7 @@
         </nav>
 
         <section class="page-content" id="spells">
+            <h2 class="text-center">Заклинания</h2>
 
         </section>
     </div>
