--- a/public/views/merits/merit.html
+++ b/public/views/merits/merit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Список недостатков</title>
+    <title>Пререквизиты</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
@@ -9,20 +9,18 @@
 
     <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
     <link rel="stylesheet" type="text/css" href="/node_modules/sweetalert2/dist/sweetalert2.min.css">
-    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap-select/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap-select/dist/css/bootstrap-select.min.css">
 
     <!-- Vendors Scripts -->
     <!-- v1.0.0 -->
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/assets/vendors/jquery/jquery.min.js"></script>
     <script src="/node_modules/tether/dist/js/tether.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/node_modules/jscrollpane/script/jquery.jscrollpane.min.js"></script>
     <script src="/node_modules/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="/node_modules/autosize/dist/autosize.min.js"></script>
     <script src="/assets/vendors/datatables/media/js/dataTables.bootstrap4.min.js"></script>
-    <script src="/assets/vendors/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
-    <script src="/assets/vendors/datatables-responsive/js/dataTables.responsive.js"></script>
-    <script src="/node_modules/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="/assets/vendors/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
     <script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
     <!-- Clean UI Scripts -->
